Fix alignment of "Help" link for long usernames.

--- a/lms/static/sass/_overrides.scss
+++ b/lms/static/sass/_overrides.scss
@@ -58,6 +58,7 @@
     }
 
     h2.course-header {
+      width: 50%;
       color: #3399ff;
       text-shadow: none;
     }
